meu-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meu-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meu-app
  template:
    metadata:
      labels:
        app: meu-app
    spec:
      containers:
      - name: meu-app
        # Imagem v2 com Python + Flask + Psycopg2
        image: southamerica-east1-docker.pkg.dev/gsre-489913/meu-repo/meu-app:v2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: meu-app-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: meu-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
